<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".NewQuiz">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/def"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/def1"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText

                android:id="@+id/trm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/trm1"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </TableRow>

        <TableRow
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/def2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/def2"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText

                android:id="@+id/trm2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/trm2"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/def3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/def3"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText

                android:id="@+id/trm3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/trm3"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/def4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"

                android:text="@string/def4"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText

                android:id="@+id/trm4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/trm4"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/r5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/def5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/def5"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText

                android:id="@+id/trm5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/trm5"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/r6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/def6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/def6"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText

                android:id="@+id/trm6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/trm6"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/r7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/def7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/def7"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText

                android:id="@+id/trm7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/trm7"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/r8"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/def8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/def8"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText

                android:id="@+id/trm8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/trm8"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/r9"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/def9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/def9"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText

                android:id="@+id/trm9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/trm9"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/r10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/def10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/def10"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/trm10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/trm10"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/loadquiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadQuiz"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enterButton"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>