<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTwo">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:text="@string/btnGoToMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:background="@drawable/shape"
        android:backgroundTint="#00FEFE"
        android:layout_weight="2"

        android:layout_margin="10dp"




        android:padding="2dp"

        android:textSize="30sp"


        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/resultsTitle"
        android:layout_width="207dp"
        android:layout_height="77dp"
        android:layout_marginBottom="32dp"
        android:text="@string/resultsTitle"
        app:layout_constraintBottom_toTopOf="@+id/display"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGoToNewQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGoNewQuiz"
        app:layout_constraintBottom_toTopOf="@+id/resultsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>