<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTerm1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="#00FEFE"
                android:padding="2dp"
                android:text="@string/btnTerm1txt"
                android:textSize="14sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTerm2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="#00FEFE"
                android:padding="2dp"
                android:text="@string/btnTerm2txt"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTerm3"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="#00FEFE"
                android:padding="2dp"
                android:text="@string/btnTerm3txt"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTerm4"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="#00FEFE"
                android:padding="2dp"
                android:text="@string/btnTerm4txt"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/displayDef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:gravity="center|fill_horizontal"
        android:text="@string/displayDef"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <TextView
        android:id="@+id/questionCountDsiplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionCountDsi"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/displayDef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

</androidx.constraintlayout.widget.ConstraintLayout>